--- a/BoodmoParser/BoodmoParser.csproj
+++ b/BoodmoParser/BoodmoParser.csproj
@@ -15,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
+    <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="6.14.4" />
   </ItemGroup>
 
 </Project>
