--- a/BoodmoParser/BoodmoParser.csproj
+++ b/BoodmoParser/BoodmoParser.csproj
@@ -8,26 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Images\NewFolder\**" />
-    <EmbeddedResource Remove="Images\NewFolder\**" />
-    <None Remove="Images\NewFolder\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.9" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.9">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
-    <PackageReference Include="Selenium.WebDriver" Version="4.5.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.5.1" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="106.0.5249.6100" />
-    <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="6.15.1" />
+    <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="6.15.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Images\" />
+    <Folder Include="DB\" />
   </ItemGroup>
 
 </Project>
