--- a/.gitignore
+++ b/.gitignore
@@ -361,4 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
-/BoodmoParser/Images/maruti
+/BoodmoParser/Images
+/BoodmoParser/DB
+
